// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Chips/Chips Defaults smoke-test 1`] = `
<div data-test-block="true">
  <ul class="_chipsList_jp7br_5">
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1"
              aria-pressed="false"
      >
        Trondheim
      </button>
    </li>
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1  _toggleChip_withCheckmark_1rezz_42"
              aria-pressed="false"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1rezz_57"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 20a8 8 0 1 1 0-16 8 8 0 0 1 0 16Zm0-18a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z">
          </path>
        </svg>
        Bergen
      </button>
    </li>
    <li>
      <button type="button"
              class="_removableChip_h3oaq_1"
      >
        Oslo
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _icon_h3oaq_40"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r5:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r5:">
            Fjern filter
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Tester/Chips/Chips WithAriaLabel play-test 1`] = `
<div data-test-block="true">
  <ul class="_chipsList_jp7br_5"
      aria-label="Kontorsted"
  >
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1"
              aria-pressed="false"
      >
        Trondheim
      </button>
    </li>
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1  _toggleChip_withCheckmark_1rezz_42"
              aria-pressed="false"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1rezz_57"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 20a8 8 0 1 1 0-16 8 8 0 0 1 0 16Zm0-18a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z">
          </path>
        </svg>
        Bergen
      </button>
    </li>
    <li>
      <button type="button"
              class="_removableChip_h3oaq_1"
      >
        Oslo
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _icon_h3oaq_40"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Fjern filter
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Tester/Chips/Chips WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ul id="htmlId"
      class="_chipsList_jp7br_5 dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1"
              aria-pressed="false"
      >
        Trondheim
      </button>
    </li>
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1  _toggleChip_withCheckmark_1rezz_42"
              aria-pressed="false"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1rezz_57"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 20a8 8 0 1 1 0-16 8 8 0 0 1 0 16Zm0-18a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z">
          </path>
        </svg>
        Bergen
      </button>
    </li>
    <li>
      <button type="button"
              class="_removableChip_h3oaq_1"
      >
        Oslo
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _icon_h3oaq_40"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Fjern filter
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Tester/Chips/Chips WithCloseAndFocusNext play-test 1`] = `
<div data-test-block="true">
  <ul class="_chipsList_jp7br_5">
    <li>
      <button type="button"
              class="_removableChip_h3oaq_1"
      >
        Trondheim
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _icon_h3oaq_40"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r8:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r8:">
            Fjern filter
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </li>
    <li>
      <button type="button"
              class="_removableChip_h3oaq_1"
      >
        Oslo
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _icon_h3oaq_40"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Fjern filter
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Tester/Chips/Chips WithCloseLastChip play-test 1`] = `
<div data-test-block="true">
  <span class="_srOnly_jp7br_14"
        tabindex="-1"
  >
    Ingen flere filtre
  </span>
</div>
`;

exports[`Tester/Chips/Chips WithRef play-test 1`] = `
<div data-test-block="true">
  <ul class="_chipsList_jp7br_5"
      id="dummyIdForwardedFromRef"
  >
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1"
              aria-pressed="false"
      >
        Trondheim
      </button>
    </li>
    <li>
      <button type="button"
              class="_toggleChip_1rezz_1  _toggleChip_withCheckmark_1rezz_42"
              aria-pressed="false"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1rezz_57"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 20a8 8 0 1 1 0-16 8 8 0 0 1 0 16Zm0-18a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z">
          </path>
        </svg>
        Bergen
      </button>
    </li>
    <li>
      <button type="button"
              class="_removableChip_h3oaq_1"
      >
        Oslo
        <svg class="_systemIcon_6zbcy_2 _systemIcon_small_6zbcy_5 _icon_h3oaq_40"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1:">
            Fjern filter
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </li>
  </ul>
</div>
`;
